bucky and content changes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -182,6 +182,10 @@ html, body {
   text-align: right; }
 
 @media (min-width: 768px) {
+  .extra-pad {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
   .text-sm-left {
     text-align: left !important; }
 
