--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -737,6 +737,9 @@ blockquote p {
 @media only screen and (max-width: 767px) {
   .navbar-collapse {
     background-color: rgba(0, 0, 0, 0.9); } }
+.intro {
+  padding-top: 50px;
+}
 .header-wrapper {
   background: url(../images/backgrounds/bg-header.jpg) no-repeat center center;
   background-size: cover;
@@ -2308,23 +2311,12 @@ blockquote p {
     .footer-widgets .content-wrap {
       padding-left: 25px; } }
 
-.four-o-four {
-  display: table;
-  height: 100vh;
-  width: 100%;
-  background-image: url(../images/404.jpg);
-  background-size: contain;
-  background-position: 20% center;
-  background-repeat: no-repeat; }
-  @media (max-width: 991px) {
-    .four-o-four {
-      background-position-x: 0; } }
-  @media (max-width: 767px) {
-    .four-o-four {
-      background-image: none;
-      text-align: center; } }
-  .four-o-four .four-o-four-inner {
-    display: table-cell;
-    vertical-align: middle; }
-    .four-o-four .four-o-four-inner h1 {
-      font-weight: bold; }
+
+.move-text {  
+  font-family: 'Source Code Pro';
+  font-weight: 200;
+  font-size: 70px;
+  color: #FFFFFF;}
+.move-dud {
+  color: #757575;
+}
